# nb2prod-ml-model

./: .gitignore  README.md  pyproject.toml  tox.ini
nb2prod_ml_model/: predict.py  train.py
tests/: test_predict.py  test_train.py
